# mpv_video_sync

./: Cargo.toml  README.md
src/: client.rs  lib.rs  mpv_data_model.rs  network_data_model.rs  server.rs
src/client/: backend.rs  main.rs  mpv_data_model.rs  notification.rs
src/client/mpv/: ipc_data_model.rs  mod.rs
src/server/: main.rs
