[package]
name = "video_sync"
version = "0.1.0"
authors = ["neuring <neuring@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mpv_sync_client"
path = "src/client/main.rs"

[[bin]]
name = "mpv_sync_server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.34"
async-process = "1.0.1"
async-std = "1.7.0"
crossbeam = "0.8.0"
futures = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
