[package]
name = "video_sync"
version = "0.1.2"
authors = ["neuring <neuring@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mpv_sync_client"
path = "src/client/main.rs"

[[bin]]
name = "mpv_sync_server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.34"
async-process = "1.0.1"
async-std = "1.7.0"
derive_more = "0.99.11"
futures = "0.3.8"
hex = "0.4.2"
memmap = "0.7.0"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
sha2 = "0.9.2"
structopt = "0.3.21"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
